--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@
 #
 #    pip-compile requirements.in
 #
-anyio==3.7.1
+anyio==4.0.0
     # via httpcore
 asgiref==3.7.2
     # via django
@@ -15,7 +15,7 @@ certifi==2023.7.22
     #   requests
 charset-normalizer==3.2.0
     # via requests
-django==4.2.4
+django==4.2.5
     # via -r requirements.in
 h11==0.14.0
     # via httpcore
@@ -30,7 +30,9 @@ idna==3.4
     #   requests
 psycopg2-binary==2.9.7
     # via -r requirements.in
-python-telegram-bot==20.4
+python-decouple==3.8
+    # via -r requirements.in
+python-telegram-bot==20.5
     # via -r requirements.in
 requests==2.31.0
     # via -r requirements.in
